RUBEN: cambios html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="./static/debod.jpg"> <!-- <img src="./static/Templo de Debod1.jpg"> -->
+			                    <img src="./static/Templo de Debod1.jpg">
 			                     <h3>Turismo</h3>
 			                    <p>Saca tu lado culto</p>
 			                    <p><a href="listaEventos.html" id="Turismo" class="toEventFilter">Lugares turísticos</a></p>
