--- a/evento.html
+++ b/evento.html
@@ -40,7 +40,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" id="eventImg1" src="" alt="" style="width:960px;height:438px">
+                <img class="img-responsive" id="eventImg1" src="" alt="">
             </div>
 
             <div class="col-md-4">
@@ -65,25 +65,25 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg2"  style="width:262.5px;height:174.45px" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg2" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg3"  style="width:262.5px;height:174.45px" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg3" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg4"  style="width:262.5px;height:174.45px" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg4" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg5"  style="width:262.5px;height:174.45px" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg5" src="" alt="">
             </div>
 
         </div>
         <!-- /.row -->
 
-        <div class="row">
+        <!--<div class="row">
             <div class="col-lg-12">
                 <h3 class="page-header" id="eventTitle">Comentarios</h3>
                 <form class="form-inline" role="form" method="POST" action="/comment">
@@ -124,7 +124,7 @@
             </div>
         </div>
         <br>
-        <br>
+        <br>-->
 
 
             <!--<h3 class="page-header">Comentarios</h3>
