--- a/perfil.html
+++ b/perfil.html
@@ -65,9 +65,9 @@
 				<li><button type="button" class="password-perfil btn btn-primary"> Contraseña <span class="glyphicon glyphicon-pencil"></span></button><button type="submit" style="display:none" class="perfil-guardar-password btn btn-success">Guardar</button>
 					<div class="form-group">
 					<label style="display:none" for="password" id="password1-perfil-label">Contraseña Nueva </label>
-					<input style="display:none" type="password" class="password1 form-control" id="password1-perfil" name="password" placeholder="Introduzca su nueva contraseña">
+					<input style="display:none" type="password" class="password1 form-control" id="password1-perfil" name="password" placeholder="Introduzca su contraseña actual">
 					<label style="display:none" for="password" id="password2-perfil-label">Contraseña Nueva </label>
-					<input style="display:none" type="password" class="password2 form-control" id="password2-perfil" name="password2" placeholder="Vuelva a introducir su contraseña nueva ">
+					<input style="display:none" type="password" class="password2 form-control" id="password2-perfil" name="password2" placeholder="Vuelva a introducción su nueva contraseña">
 					</div>
 				</li>
 				</div>
@@ -102,10 +102,11 @@
 		<!-- encabezado -->
 		<div class="container">
 			<div class="fb-profile">
-				<img align="left" class="fb-image-lg" src="./static/anonimoportada.jpg" alt="Profile image example"/>
-				<img align="left" class="fb-image-profile thumbnail" src="./static/anonimoperfil.jpg" alt="Profile image example"/>
+				<img align="left" class="fb-image-lg" src="http://lorempixel.com/850/280/nightlife/5/" alt="Profile image example"/>
+				<img align="left" class="fb-image-profile thumbnail" src="./static/marco.jpg" alt="Profile image example"/>
 				<div class="fb-profile-text">
-					<h1 id="profile-name"><small><span class="glyphicon glyphicon-cog" id="config"></span></small></h1>
+					<h1 id="profile-name">Marco y Amedio <small><span class="glyphicon glyphicon-cog" id="config"></span></small></h1>
+					<p>Buscando a mi madre por Madrid</p>
 				</div>
 			</div>
 		</div>
