--- a/header-footer.html
+++ b/header-footer.html
@@ -30,9 +30,7 @@
 
     <div class="alert alert-success" id="sign-success" role="alert">¡Enhorabuena! Se ha registrado correctamente</div>
     <div class="alert alert-success" id="event-success" role="alert">¡Enhorabuena! El evento se ha creado correctamente</div>
-    <div class="alert alert-success" id="subscribe-success" role="alert">¡Te has subscrito correctamente!</div>
-    <div class="alert alert-success" id="perfil3-success" role="alert"></div>
-
+    <div class="alert alert-success" id="perfil-success" role="alert">¡Enhorabuena! Ha modificado el parametro correctamente</div>
 
     <!--Formulario de registro-->
 	<div class="modal fade" id="formRegistryModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
@@ -83,7 +81,7 @@
 							<input class="check" type="checkbox">
 							<label>* Acepto las condiciones y confirmo que he leído la política de datos de la empresa, así como el uso de cookies.
 							</label>
-						</div>							
+						</div>
 						<div style="display:none" class="check-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
@@ -174,7 +172,7 @@
 							<select id="categoria", name="category">
 	                             <option value="Turismo">Turismo</option>
 	                             <option value="Gastronomia">Gastronomía</option>
-	                             <option value="Vida Nocturna">Vida nocturna</option>         
+	                             <option value="Vida Nocturna">Vida nocturna</option>
                         	</select>
 						</div>
 						<div class="form-group">
@@ -182,14 +180,14 @@
 							<select id="calle", name="calle">
 	                             <option value="Calle">Calle</option>
 	                             <option value="Avenida">Avenida</option>
-	                             <option value="Via">Vía</option>     
+	                             <option value="Via">Vía</option>
 	                             <option value="Carretera">Carretera</option>
 	                             <option value="Avenida">Avenida</option>
-	                             <option value="Plaza">Plaza</option> 
+	                             <option value="Plaza">Plaza</option>
 	                             <option value="Ronda">Ronda</option>
 	                             <option value="Urbanizacion">Urbanización</option>
 	                             <option value="Paseo">Paseo</option>
-	                             <option value="C/">C/</option>     
+	                             <option value="C/">C/</option>
                         	</select>
 							<input type="text" class="direccion form-control" id="bloque" name="address" placeholder="Nombre">
 							<input type="number" class="numero form-control" id="bloque" name="number" placeholder="Número">
@@ -220,8 +218,8 @@
 						</div>
 						<div>
 							<label for="foto">Introduzca imágenes para el evento (mínimo dos)</label>
-							<input class="image1" type="file" name="img" accept="image/*"> 
-							<input disabled class="image2" type="file" name="img" accept="image/*">
+							<input class="image1" type="file" name="img" accept="image/*">
+							<input class="image2" type="file" name="img" accept="image/*">
 							<input disabled class="image3" type="file" name="img" accept="image/*">
 							<input disabled class="image4" type="file" name="img" accept="image/*">
 							<input disabled class="image5" type="file" name="img" accept="image/*">
@@ -232,37 +230,37 @@
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div style="display:none" class="img2-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div style="display:none" class="img3-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div style="display:none" class="img4-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div style="display:none" class="img5-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div style="display:none" class="param-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>			
+						</div>
 						<div style="display:none" class="cevent-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>	
+						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="btn btn-success pull-right">Crear</button>
