--- a/perfil.html
+++ b/perfil.html
@@ -102,11 +102,10 @@
 		<!-- encabezado -->
 		<div class="container">
 			<div class="fb-profile">
-				<img align="left" class="fb-image-lg" src="http://lorempixel.com/850/280/nightlife/5/" alt="Profile image example"/>
-				<img align="left" class="fb-image-profile thumbnail" src="./static/marco.jpg" alt="Profile image example"/>
+				<img align="left" class="fb-image-lg" src="./static/anonimoportada.jpg" alt="Profile image example"/>
+				<img align="left" class="fb-image-profile thumbnail" src="./static/anonimoperfil.jpg" alt="Profile image example"/>
 				<div class="fb-profile-text">
-					<h1 id="profile-name">Marco y Amedio <small><span class="glyphicon glyphicon-cog" id="config"></span></small></h1>
-					<p>Buscando a mi madre por Madrid</p>
+					<h1 id="profile-name"></h1><span class="glyphicon glyphicon-cog" id="config"></span>
 				</div>
 			</div>
 		</div>
