--- a/header-footer.html
+++ b/header-footer.html
@@ -23,7 +23,7 @@
 		        <button type="button" class="button-nav logIn" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav signIn" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
 		       	<button type="button" class="button-nav createEvent" id="createEvent" data-toggle="modal" data-target="#formCreateEvent" style="display:none">Crear evento</button>
-		       	<button type="button" class="button-nav signOut" id="sign" style="display:none" onclick="signOut()">Log out</button>
+		       	<a href="index.html"><button type="button" class="button-nav signOut" id="sign" style="display:none" onclick="signOut()">Log out</button></a>
 		    </div>
 	    </div>
     </div>
