--- a/perfil.html
+++ b/perfil.html
@@ -108,8 +108,8 @@
 		<!-- encabezado -->
 		<div class="container">
 			<div class="fb-profile">
-				<img align="left" class="fb-image-lg" src="./static/anonimoportada.jpg" alt="Profile image example"/>
-				<img align="left" class="fb-image-profile thumbnail" src="./static/anonimoperfil.jpg" alt="Profile image example"/>
+				<img align="left" class="fb-image-lg" src="./static/anonimoportada.jpg" alt=""/>
+				<img align="left" class="fb-image-profile thumbnail" src="./static/anonimoperfil.jpg" alt=""/>
 				<div class="fb-profile-text">
 					<h1 id="profile-name"></h1><span class="glyphicon glyphicon-cog" id="config"></span>
 				</div>
