Cambios en perfil

--- a/perfil.html
+++ b/perfil.html
@@ -57,11 +57,6 @@
 					<span class="sr-only"></span>
 					<span class="text"></span>
 				</div>
-				<div class="form-group">
-				<li><button type="button" class="usuario-perfil btn btn-primary"> Nombre de usuario <span class="glyphicon glyphicon-pencil"></span></button><button type="submit" style="display:none" class="perfil-guardar-usuario btn btn-success">Guardar</button>
-					<input style="display:none" type="text" class="usuario form-control" id="usuario-perfil" name="username" placeholder="Introduzca su usuario">
-				</li>
-				</div>
 				<div style="display:none" class="usuario-perfil-error alert alert-danger" role="alert">
 					<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 					<span class="sr-only"></span>
@@ -111,7 +106,8 @@
 				<img align="left" class="fb-image-lg" src="./static/anonimoportada.jpg" alt=""/>
 				<img align="left" class="fb-image-profile thumbnail" src="./static/anonimoperfil.jpg" alt=""/>
 				<div class="fb-profile-text">
-					<h1 id="profile-name"></h1><span class="glyphicon glyphicon-cog" id="config"></span>
+					<h1 id="profile-name"></h1><span class="email">EMAIL</span>
+<span class="config">Configurar</span><span class="glyphicon glyphicon-cog" id="config"></span>
 				</div>
 			</div>
 		</div>
